--- a/environment.yml
+++ b/environment.yml
@@ -1,120 +1,163 @@
-name: image_processing
 channels:
-  - conda-forge
-  - bioconda
+  - pytorch
   - defaults
-  - r
+  - conda-forge
+  - bcbio
+  - bioconda
 dependencies:
-  - appdirs=1.4.3=py_1
-  - attrs=19.1.0=py_0
-  - backcall=0.1.0=py_0
-  - black=19.3b0=py_0
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - attrs=22.1.0=pyh71513ae_1
+  - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
-  - bleach=3.1.0=py_0
-  - ca-certificates=2019.9.11=hecc5488_0
-  - certifi=2019.9.11=py36_0
-  - click=7.0=py_0
-  - cloudpickle=1.2.2=py_0
-  - colorama=0.4.1=py_0
-  - cycler=0.10.0=py_1
-  - cytoolz=0.10.0=py36hfa6e2cd_0
-  - dask-core=2.4.0=py_0
-  - decorator=4.4.0=py_0
-  - defusedxml=0.5.0=py_1
-  - entrypoints=0.3=py36_1000
-  - freetype=2.10.0=h563cfd7_1
-  - icc_rt=2019.0.0=h0cc432a_1
-  - icu=64.2=he025d50_1
-  - imageio=2.5.0=py36_0
-  - intel-openmp=2019.4=245
-  - ipykernel=5.1.2=py36h5ca1d4c_0
-  - ipython=7.8.0=py36h5ca1d4c_0
-  - ipython_genutils=0.2.0=py_1
-  - jedi=0.15.1=py36_0
-  - jinja2=2.10.1=py_0
-  - joblib=0.13.2=py_0
-  - jpeg=9c=hfa6e2cd_1001
-  - json5=0.8.5=py_0
-  - jsonschema=3.0.2=py36_0
-  - jupyter_client=5.3.1=py_0
-  - jupyter_core=4.4.0=py_0
-  - jupyterlab=1.1.3=py_0
-  - jupyterlab_server=1.0.6=py_0
-  - kiwisolver=1.1.0=py36he980bc4_0
-  - libblas=3.8.0=12_mkl
-  - libcblas=3.8.0=12_mkl
-  - libclang=8.0.1=he980bc4_1
-  - liblapack=3.8.0=12_mkl
-  - liblapacke=3.8.0=12_mkl
-  - libpng=1.6.37=h7602738_0
-  - libsodium=1.0.17=h2fa13f4_0
-  - libtiff=4.0.10=h6512ee2_1003
-  - libwebp=1.0.2=hfa6e2cd_2
-  - lz4-c=1.8.3=he025d50_1001
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markupsafe=1.1.1=py36hfa6e2cd_0
-  - matplotlib-base=3.1.1=py36h2852a4a_1
-  - mistune=0.8.4=py36hfa6e2cd_1000
-  - mkl=2019.4=245
-  - mkl-service=2.3.0=py36hfa6e2cd_0
-  - msys2-conda-epoch=20160418=1
-  - nbconvert=5.6.0=py36_1
-  - nbformat=4.4.0=py_1
-  - networkx=2.3=py_0
-  - notebook=6.0.1=py36_0
-  - numpy=1.17.2=py36hc71023c_0
-  - olefile=0.46=py_0
-  - opencv=4.1.1=py36he03da11_2
-  - openssl=1.1.1c=hfa6e2cd_0
-  - pandas=0.25.1=py36he350917_0
-  - pandoc=2.7.3=0
-  - pandocfilters=1.4.2=py_1
-  - parso=0.5.1=py_0
-  - patsy=0.5.1=py_0
-  - pickleshare=0.7.5=py36_1000
-  - pillow=6.1.0=py36h643dfcc_1
-  - pip=19.2.3=py36_0
-  - prometheus_client=0.7.1=py_0
-  - prompt_toolkit=2.0.9=py_0
-  - pygments=2.4.2=py_0
-  - pyparsing=2.4.2=py_0
-  - pyrsistent=0.15.4=py36hfa6e2cd_0
-  - python=3.6.7=he025d50_1005
-  - python-dateutil=2.8.0=py_0
-  - pytz=2019.2=py_0
-  - pywavelets=1.0.3=py36h452e1ab_1
-  - pywinpty=0.5.5=py36_1000
-  - pyzmq=18.1.0=py36h16f9016_0
-  - qt=5.12.1=h444579a_0
-  - scikit-image=0.15.0=py36he350917_2
-  - scikit-learn=0.21.3=py36h7208079_0
-  - scipy=1.3.1=py36h29ff71c_0
-  - seaborn=0.9.0=py_1
-  - send2trash=1.5.0=py_0
-  - setuptools=41.2.0=py36_0
-  - six=1.12.0=py36_1000
-  - sqlite=3.29.0=hfa6e2cd_1
-  - statsmodels=0.10.1=py36hfa6e2cd_0
-  - terminado=0.8.2=py36_0
-  - testpath=0.4.2=py_1001
-  - tk=8.6.9=hfa6e2cd_1003
-  - toml=0.10.0=py_0
-  - toolz=0.10.0=py_0
-  - tornado=6.0.3=py36hfa6e2cd_0
-  - traitlets=4.3.2=py36_1000
-  - vc=14.1=h0510ff6_4
-  - vs2015_runtime=14.16.27012=hf0eaf9b_0
-  - wcwidth=0.1.7=py_1
-  - webencodings=0.5.1=py_1
-  - wheel=0.33.6=py36_0
-  - wincertstore=0.2=py36_1002
-  - winpty=0.4.3=4
-  - xz=5.2.4=h2fa13f4_1001
-  - zeromq=4.3.2=h6538335_2
-  - zlib=1.2.11=h2fa13f4_1006
-  - zstd=1.4.0=hd8a0e53_0
-
+  - blosc=1.21.0=h8c45485_0
+  - bottleneck=1.3.4=py39hce1f21e_0
+  - brotli=1.0.9=he6710b0_2
+  - brunsli=0.1=h2531618_0
+  - bzip2=1.0.8=h7b6447c_0
+  - c-ares=1.18.1=h7f8727e_0
+  - ca-certificates=2022.9.14=ha878542_0
+  - certifi=2022.9.14=pyhd8ed1ab_0
+  - cfitsio=3.470=hf0d0db6_6
+  - charls=2.2.0=h2531618_0
+  - cloudpickle=2.0.0=pyhd3eb1b0_0
+  - cudatoolkit=10.2.89=hfd86e86_1
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - cytoolz=0.11.0=py39h27cfd23_0
+  - dask-core=2022.5.0=py39h06a4308_0
+  - debugpy=1.5.1=py39h295c915_0
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - entrypoints=0.4=py39h06a4308_0
+  - executing=0.8.3=pyhd3eb1b0_0
+  - ffmpeg=4.3=hf484d3e_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
+  - freetype=2.11.0=h70c0345_0
+  - fsspec=2022.3.0=py39h06a4308_0
+  - giflib=5.2.1=h7b6447c_0
+  - gmp=6.2.1=h295c915_3
+  - gnutls=3.6.15=he1e5248_0
+  - imagecodecs=2021.8.26=py39h4cda21f_0
+  - imageio=2.9.0=pyhd3eb1b0_0
+  - importlib-metadata=4.11.4=py39hf3d152e_0
+  - importlib_resources=5.9.0=pyhd8ed1ab_0
+  - intel-openmp=2021.4.0=h06a4308_3561
+  - ipykernel=6.15.2=py39h06a4308_0
+  - ipython=8.4.0=py39h06a4308_0
+  - ipywidgets=8.0.2=pyhd8ed1ab_1
+  - jedi=0.18.1=py39h06a4308_1
+  - jpeg=9e=h7f8727e_0
+  - jsonschema=4.16.0=pyhd8ed1ab_0
+  - jupyter_client=7.3.5=py39h06a4308_0
+  - jupyter_core=4.10.0=py39h06a4308_0
+  - jupyterlab_widgets=3.0.3=pyhd8ed1ab_0
+  - jxrlib=1.1=h7b6447c_2
+  - kiwisolver=1.4.2=py39h295c915_0
+  - krb5=1.19.2=hac12032_0
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libaec=1.0.4=he6710b0_1
+  - libcurl=7.82.0=h0b77cf5_0
+  - libdeflate=1.8=h7f8727e_5
+  - libedit=3.1.20210910=h7f8727e_0
+  - libev=4.33=h7f8727e_1
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=7.5.0=ha8ba4b0_17
+  - libgfortran4=7.5.0=ha8ba4b0_17
+  - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h7f8727e_2
+  - libidn2=2.3.2=h7f8727e_0
+  - libnghttp2=1.46.0=hce63b2e_0
+  - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.18=h7b6447c_0
+  - libssh2=1.10.0=h8f2d780_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.16.0=h27cfd23_0
+  - libtiff=4.2.0=h85742a9_0
+  - libunistring=0.9.10=h27cfd23_0
+  - libuv=1.40.0=h7b6447c_0
+  - libwebp=1.2.2=h55f646e_0
+  - libwebp-base=1.2.2=h7f8727e_0
+  - libzopfli=1.0.3=he6710b0_0
+  - locket=1.0.0=py39h06a4308_0
+  - lz4-c=1.9.3=h295c915_1
+  - matplotlib-base=3.5.1=py39ha18d171_1
+  - matplotlib-inline=0.1.6=py39h06a4308_0
+  - mkl=2021.4.0=h06a4308_640
+  - mkl-service=2.4.0=py39h7f8727e_0
+  - mkl_fft=1.3.1=py39hd3c417c_0
+  - mkl_random=1.2.2=py39h51133e4_0
+  - munkres=1.1.4=py_0
+  - nbformat=5.5.0=pyhd8ed1ab_0
+  - ncurses=6.3=h5eee18b_3
+  - nest-asyncio=1.5.5=py39h06a4308_0
+  - nettle=3.7.3=hbbd107a_1
+  - networkx=2.7.1=pyhd3eb1b0_0
+  - numexpr=2.8.1=py39h807cd23_2
+  - numpy=1.22.3=py39he7a7128_0
+  - numpy-base=1.22.3=py39hf524024_0
+  - openh264=2.1.1=h4ff587b_0
+  - openjpeg=2.4.0=h3ad879b_0
+  - openssl=1.1.1q=h7f8727e_0
+  - packaging=21.3=pyhd3eb1b0_0
+  - pandas=1.4.2=py39h295c915_0
+  - parso=0.8.3=pyhd3eb1b0_0
+  - partd=1.2.0=pyhd3eb1b0_1
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=9.0.1=py39h22f2fdc_0
+  - pip=22.1.2=py39h06a4308_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.20=pyhd3eb1b0_0
+  - psutil=5.9.0=py39h5eee18b_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pygments=2.11.2=pyhd3eb1b0_0
+  - pyparsing=3.0.9=py39h06a4308_0
+  - pyrsistent=0.18.1=py39hb9d737c_1
+  - python=3.9.13=haa1d7c7_1
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-fastjsonschema=2.16.2=pyhd8ed1ab_0
+  - python_abi=3.9=2_cp39
+  - pytorch=1.10.1=py3.9_cuda10.2_cudnn7.6.5_0
+  - pytorch-mutex=1.0=cuda
+  - pytz=2022.1=py39h06a4308_0
+  - pywavelets=1.3.0=py39h7f8727e_0
+  - pyyaml=6.0=py39h7f8727e_1
+  - pyzmq=23.2.0=py39h6a678d5_0
+  - readline=8.1.2=h7f8727e_1
+  - scikit-image=0.18.3=py39h51133e4_0
+  - scipy=1.7.3=py39hc147768_0
+  - setuptools=63.4.1=py39h06a4308_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - snappy=1.1.9=h295c915_0
+  - sqlite=3.39.2=h5082296_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
+  - tifffile=2021.7.2=pyhd3eb1b0_2
+  - tk=8.6.12=h1ccaba5_0
+  - toolz=0.11.2=pyhd3eb1b0_0
+  - torchaudio=0.10.1=py39_cu102
+  - torchvision=0.11.2=py39_cu102
+  - tornado=6.2=py39h5eee18b_0
+  - tqdm=4.64.0=py39h06a4308_0
+  - traitlets=5.1.1=pyhd3eb1b0_0
+  - typing_extensions=4.1.1=pyh06a4308_0
+  - tzdata=2022c=h04d1e81_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - widgetsnbextension=4.0.3=pyhd8ed1ab_0
+  - xz=5.2.5=h7f8727e_1
+  - yaml=0.2.5=h7b6447c_0
+  - zeromq=4.3.4=h2531618_0
+  - zfp=0.5.5=h295c915_6
+  - zipp=3.8.1=pyhd8ed1ab_0
+  - zlib=1.2.12=h5eee18b_3
+  - zstd=1.4.9=haebb681_0
+  - pip:
+    - joblib==1.2.0
+    - scikit-learn==1.1.2
+    - seaborn==0.12.0
+    - threadpoolctl==3.1.0
